z-index/modal fix

--- a/css/style.css
+++ b/css/style.css
@@ -220,26 +220,34 @@ img {
     background-color: var(--accent-dark-color);
 }
 
-.hero-modal-container {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
+.hero-modal {
+    width: 100%;
+    height: 100%;
+    position: fixed;
     background-color: rgba(0, 0, 0, 0.2);
     top: 0px;
     left: 0px;
     transition: opacity ease 1s;
+    z-index: 9;
+}
+
+.hero-modal-container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
 }
 
 .hero-modal-window {
     width: 528px;
     height: 581px;
-    margin-top: 221px;
     position: absolute;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     background: var(--secondary-title-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    z-index: 10;
 }
 
 .modal-close-link {
